--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
     <script type="text/javascript">
         //alert("Hola mundo");
-        
     </script>
 </head>
 <body>
+    <img class="img-background" src="https://images.unsplash.com/photo-1542831371-29b0f74f9713?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cHJvZ3JhbWFjaW9ufGVufDB8fDB8fHww" alt="">
     <nav>
         <div class="div-button" ><p>Jair Perez ⋅ Dev Freelance</p></div>
         <div class="div-button" ><a href="https://drive.google.com/file/d/1vwl3EDp83IVO1TeMmRA9JCB8hRdbs3Yv/view?usp=sharing" Target="_blank"><p>CV Publico</p></a></div>
@@ -43,13 +43,17 @@
     </div>
     <h1 class="name">Jair Perez ⋅ Dev Freelance</h1>
     <br>
-    <div class="div-1"><p>Desarrollador Web y Diseñadora UI/UX
-        <br>
-        <br>
-        Soy Lic. en Informatica, apasionado por la tecnología y el desarrollo web. Me encanta enfrentar nuevos desafíos, aprender constantemente y crear soluciones prácticas. Disfruto colaborar con otros y aportar ideas innovadoras para hacer que los proyectos sean un éxito.
-        <br>
-        <br>
-        Mi enfoque se centra en ofrecer una navegación fluida, mejorando continuamente la calidad de cada proyecto, y aplicando una resolución creativa de problemas para garantizar un equilibrio perfecto entre estética y rendimiento.</p></div>
+    <div class="div-1">
+        <p>Desarrollador Web y Diseñadora UI/UX
+            <br>
+            <br>
+            Soy Lic. en Informatica, apasionado por la tecnología y el desarrollo web. Me encanta enfrentar nuevos desafíos, aprender constantemente y crear soluciones prácticas. Disfruto colaborar con otros y aportar ideas innovadoras para hacer que los proyectos sean un éxito.
+            <br>
+            <br>
+            Mi enfoque se centra en ofrecer una navegación fluida, mejorando continuamente la calidad de cada proyecto, y aplicando una resolución creativa de problemas para garantizar un equilibrio perfecto entre estética y rendimiento.
+        </p>
+    </div>
+    <br>
     <div class="div-2"><p>Este sitio está diseñado para que descubras mis proyectos, habilidades y cómo puedo ayudarte a llevar tus ideas al siguiente nivel. ¡Explora y no dudes en dejarme un mensaje si quieres colaborar o simplemente conectar!</p></div>
     
 
