Edit social button

--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
         </p>
     </div>
     <br>
-    <div class="div-2"><p>Este sitio está diseñado para que descubras mis proyectos, habilidades y cómo puedo ayudarte a llevar tus ideas al siguiente nivel. ¡Explora y no dudes en dejarme un mensaje si quieres colaborar o simplemente conectar!</p></div>
+    <div class="div-2">
+        <p>
+            Este sitio está diseñado para que descubras mis proyectos, habilidades y cómo puedo ayudarte a llevar tus ideas al siguiente nivel. ¡Explora y no dudes en dejarme un mensaje si quieres colaborar o simplemente conectar!
+        </p>
+    </div>
     
 
     <script src="scripts/codigo.js"></script>
