--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     </script>
 </head>
 <body>
-    <img class="img-background" src="https://images.unsplash.com/photo-1542831371-29b0f74f9713?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cHJvZ3JhbWFjaW9ufGVufDB8fDB8fHww" alt="">
+    <!---->><img class="img-background" src="https://images.unsplash.com/photo-1542831371-29b0f74f9713?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cHJvZ3JhbWFjaW9ufGVufDB8fDB8fHww" alt="">
+    
     <nav>
         <div class="div-button" ><p>Jair Perez ⋅ Dev Freelance</p></div>
         <div class="div-button" ><a href="https://drive.google.com/file/d/1vwl3EDp83IVO1TeMmRA9JCB8hRdbs3Yv/view?usp=sharing" Target="_blank"><p>CV Publico</p></a></div>
@@ -41,6 +42,7 @@
             </a>
         </div>
     </div>
+
     <h1 class="name">Jair Perez ⋅ Dev Freelance</h1>
     <br>
     <div class="div-1">
@@ -57,6 +59,14 @@
     <div class="div-2">
         <p>
             Este sitio está diseñado para que descubras mis proyectos, habilidades y cómo puedo ayudarte a llevar tus ideas al siguiente nivel. ¡Explora y no dudes en dejarme un mensaje si quieres colaborar o simplemente conectar!
+        </p>
+    </div>
+    <br>
+    <div class="div-3">
+        <h1>Trayectoria Profesional</h1>
+        <hr>
+        <p>
+            He participado en proyectos que integran creatividad y funcionalidad, diseñando soluciones digitales prácticas y efectivas. Cada experiencia ha sido una oportunidad para enfrentar nuevos desafíos, aprender de forma continua y fortalecer mis habilidades. Mi trayectoria profesional se ha consolidado en los siguientes roles destacados:
         </p>
     </div>
     
