--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JAIR-PL</title>
+    <link rel="shortcut icon" href="images/Logo1.ico" />
     <link rel="stylesheet" href="styles/style.css">
 
     <script type="text/javascript">
