--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!---->><img class="img-background" src="https://images.unsplash.com/photo-1542831371-29b0f74f9713?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cHJvZ3JhbWFjaW9ufGVufDB8fDB8fHww" alt="">
     
     <nav>
-        <div class="div-button" ><p>Jair Perez ⋅ Dev Freelance</p></div>
+        <div class="div-button" ><p>Jair Perez</p></div>
         <div class="div-button" ><a href="https://drive.google.com/file/d/1vwl3EDp83IVO1TeMmRA9JCB8hRdbs3Yv/view?usp=sharing" Target="_blank"><p>CV Publico</p></a></div>
     </nav>
     <main>
