agregacion de herramientas tecnicas

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
         </div>
     </div>
 
-    <h1 class="name">Jair Perez ⋅ Dev Freelance</h1>
+    <h1 class="name">Jair Perez ⋅ Freelance Developer</h1>
     <br>
     <div class="div-1">
-        <p>Desarrollador Web y Diseñadora UI/UX
+        <p>Desarrollador Web y Desarrollador de Software Java </p>
             <br>
             <br>
             Soy Lic. en Informatica, apasionado por la tecnología y el desarrollo web. Me encanta enfrentar nuevos desafíos, aprender constantemente y crear soluciones prácticas. Disfruto colaborar con otros y aportar ideas innovadoras para hacer que los proyectos sean un éxito.
@@ -64,14 +64,57 @@
     </div>
     <br>
     <div class="div-3">
-        <h1>Trayectoria Profesional</h1>
+        <h1 class="subtittle">Trayectoria profesional</h1>
         <hr>
         <p>
             He participado en proyectos que integran creatividad y funcionalidad, diseñando soluciones digitales prácticas y efectivas. Cada experiencia ha sido una oportunidad para enfrentar nuevos desafíos, aprender de forma continua y fortalecer mis habilidades. Mi trayectoria profesional se ha consolidado en los siguientes roles destacados:
         </p>
+        <div class="div-timelapse">
+        </div>
+        <br>
+        <div class="div-tools">
+            <h1 class="subtittle">Herramientas tecnicas</h1>
+            <div class="div-tools-lenguajes">
+                <h1 class="subsubtittle">Lenguajes de Programación</h1>
+                <hr>
+                <ul>
+                    <li><img class="img-icon-list" src="https://cdn-icons-png.flaticon.com/512/226/226777.png" alt=""><p>Java</p></li>
+                    <li><img class="img-icon-list" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/ISO_C%2B%2B_Logo.svg/1822px-ISO_C%2B%2B_Logo.svg.png" alt=""><p>C++</p></li>
+                    <li><img class="img-icon-list" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/1200px-Unofficial_JavaScript_logo_2.svg.png" alt=""><p>JavaScript</p></li>
+                    <li><img class="img-icon-list" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/512px-HTML5_logo_and_wordmark.svg.png" alt=""><p>HTML</p></li>
+                    <li><img class="img-icon-list" src="https://cdn-icons-png.flaticon.com/512/5968/5968242.png" alt=""><p>CSS</p></li>
+                    <li><img class="img-icon-list" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSF9UXfrx8TWM7eyKB1jdIk66ZoGVmTtqWjKQ&s" alt=""><p>MySQL</p></li>
+                </ul>
+            </div>
+            <div class="div-tools-frameworks">
+                <h1 class="subsubtittle">Frameworks y Librerias</h1>
+                <hr>
+                <ul>
+                    <li><img class="img-icon-list" src="https://v5.getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo-shadow.png" alt=""><p>Bootstrap</p></li>
+                    <li><img class="img-icon-list" src="https://cdn0.iconfinder.com/data/icons/logos-brands-in-colors/128/react-512.png" alt=""><p>React</p></li>
+                </ul>
+            </div>
+            <div class="div-tools-software">
+                <h1 class="subsubtittle">Software y Herramientas</h1>
+                <hr>
+                <ul>
+                    <li><img class="img-icon-list" src="https://blue.kumparan.com/image/upload/fl_progressive,fl_lossy,c_fill,q_auto:best,w_640/v1622772234/fxowfbvchecy9fd6ccpn.png" alt=""><p>Word</p></li>
+                    <li><img class="img-icon-list" src="https://static.android.com.pl/uploads/2021/06/excel-5963669_1280.png" alt=""><p>Excel</p></li>
+                    <li><img class="img-icon-list" src="https://mailmeteor.com/logos/assets/PNG/Microsoft_Office_PowerPoint_Logo_512px.png" alt=""><p>PowerPoint</p></li>
+                    <li><img class="img-icon-list" src="https://img.icons8.com/?size=512&id=9OGIyU8hrxW5&format=png" alt=""><p>Visual Studio Code</p></li>
+                    <li><img class="img-icon-list" src="https://upload.wikimedia.org/wikipedia/commons/9/98/Apache_NetBeans_Logo.svg" alt=""><p>Apache NetBeans</p></li>
+                    <li><img class="img-icon-list" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Adobe_Photoshop_CC_icon.svg/2101px-Adobe_Photoshop_CC_icon.svg.png" alt=""><p>Photoshop</p></li>
+                </ul>
+            </div>
+            <div class="div-skills">
+                
+            </div>
+        </div>
     </div>
-    
-
+    <br>
+    <footer>
+        <div class="div-footer"></div>
+    </footer>
     <script src="scripts/codigo.js"></script>
 </body>
 </html>
