--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </script>
 </head>
 <body>
-    <!---->><img class="img-background" src="https://images.unsplash.com/photo-1542831371-29b0f74f9713?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cHJvZ3JhbWFjaW9ufGVufDB8fDB8fHww" alt="">
+    <img class="img-background" src="https://images.unsplash.com/photo-1542831371-29b0f74f9713?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cHJvZ3JhbWFjaW9ufGVufDB8fDB8fHww" alt="">
     
     <nav>
         <div class="div-button" ><p>Jair Perez</p></div>
@@ -49,7 +49,6 @@
     <div class="div-1">
         <p>Desarrollador Web y Desarrollador de Software Java </p>
             <br>
-            <br>
             Soy Lic. en Informatica, apasionado por la tecnología y el desarrollo web. Me encanta enfrentar nuevos desafíos, aprender constantemente y crear soluciones prácticas. Disfruto colaborar con otros y aportar ideas innovadoras para hacer que los proyectos sean un éxito.
             <br>
             <br>
@@ -63,7 +62,7 @@
         </p>
     </div>
     <br>
-    <div class="div-3">
+    <div class="div-3 div-principal">
         <h1 class="subtittle">Trayectoria profesional</h1>
         <hr>
         <p>
@@ -72,6 +71,9 @@
         <div class="div-timelapse">
         </div>
         <br>
+    </div>
+    <br>
+    <div class="div-4 div-principal">
         <div class="div-tools">
             <h1 class="subtittle">Herramientas tecnicas</h1>
             <div class="div-tools-lenguajes">
