Separacion de logos

--- a/index.html
+++ b/index.html
@@ -68,12 +68,46 @@
         <p>
             He participado en proyectos que integran creatividad y funcionalidad, diseñando soluciones digitales prácticas y efectivas. Cada experiencia ha sido una oportunidad para enfrentar nuevos desafíos, aprender de forma continua y fortalecer mis habilidades. Mi trayectoria profesional se ha consolidado en los siguientes roles destacados:
         </p>
-        <div class="div-timelapse">
-        </div>
-        <br>
     </div>
     <br>
     <div class="div-4 div-principal">
+        <h1 class="subtittle">Logros y experiencias</h1>
+        <hr>
+        <div class="div-timelapse">
+            <ul>
+                <li>
+                    <h1 class="subsubtittle">Tecnico en Programación</h1>
+                    <h1 class="subsubtittle">2015-2018</h1>
+                    <img class="img-icon-cert" src="https://png.pngtree.com/png-vector/20220729/ourmid/pngtree-champion-award-medal-icon-png-image_6091841.png" alt="">
+                    <a href="https://drive.google.com/file/d/1GO_BD7PNCFJqNQU2gVCKgC-nw9VshUmR/view?usp=sharing" Target="_blank">Certificado</a>
+                </li>
+                <li>
+                    <h1 class="subsubtittle">Certificacion Microsoft Office 365</h1>
+                    <h1 class="subsubtittle">2018</h1>
+                    <img class="img-icon-cert" src="https://png.pngtree.com/png-vector/20220729/ourmid/pngtree-champion-award-medal-icon-png-image_6091841.png" alt="">
+                    <a href="https://drive.google.com/file/d/1ebHDgxBYR8y_0_tMsr_UI9vaimJeLS-i/view?usp=sharing" Target="_blank">Certificado</a>
+                </li>
+                <li>
+                    <h1 class="subsubtittle">Licenciatura en Informatica</h1>
+                    <h1 class="subsubtittle">2018-2023</h1>
+                    <img class="img-icon-cert" src="https://png.pngtree.com/png-vector/20220729/ourmid/pngtree-champion-award-medal-icon-png-image_6091841.png" alt="">
+                    <a href="https://drive.google.com/file/d/1t-Gd8o5DxLM_7E3hE4aY2apGWlyfholt/view?usp=sharing" Target="_blank">Certificado</a>
+                </li>
+                <li>
+                    <h1 class="subsubtittle">Pasante en Administración y Seguimiento de Proyectos</h1>
+                    <h1 class="subsubtittle">2022 (5meses)</h1>
+                    <small>Agencia Digital SYSTEMAR S.A.S de C.V</small>
+                    
+                <li>
+                    <h1 class="subsubtittle">Desarrollador de Software y Soporte</h1>
+                    <h1 class="subsubtittle">2023-2024</h1>
+                    <small>MBK Consultoría y Soluciones Tecnológicas</small>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <br>
+    <div class="div-5 div-principal">
         <div class="div-tools">
             <h1 class="subtittle">Herramientas tecnicas</h1>
             <div class="div-tools-lenguajes">
