--- a/index.html
+++ b/index.html
@@ -147,25 +147,25 @@
             <div class="div-tools-lenguajes">
                 <h1 class="subsubtittle">Frontend</h1>
                 <hr>
-                <ul>
-                    <li><img class="img-icon-list"
+                <ul class="ul-skills">
+                    <li class="skill-list"><img class="img-icon-list"
                             src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/1200px-Unofficial_JavaScript_logo_2.svg.png"
                             alt="">
                         <p>JavaScript</p>
                     </li>
-                    <li><img class="img-icon-list"
+                    <li class="skill-list"><img class="img-icon-list"
                             src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/512px-HTML5_logo_and_wordmark.svg.png"
                             alt="">
                         <p>HTML</p>
                     </li>
-                    <li><img class="img-icon-list" src="https://cdn-icons-png.flaticon.com/512/5968/5968242.png" alt="">
+                    <li class="skill-list"><img class="img-icon-list" src="https://cdn-icons-png.flaticon.com/512/5968/5968242.png" alt="">
                         <p>CSS</p>
                     </li>
-                    <li><img class="img-icon-list"
+                    <li class="skill-list"><img class="img-icon-list"
                         src="https://v5.getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo-shadow.png" alt="">
                         <p>Bootstrap</p>
                     </li>
-                    <li><img class="img-icon-list"
+                    <li class="skill-list"><img class="img-icon-list"
                             src="https://cdn0.iconfinder.com/data/icons/logos-brands-in-colors/128/react-512.png"
                             alt="">
                         <p>React</p>
@@ -175,26 +175,26 @@
             <div class="div-tools-lenguajes">
                 <h1 class="subsubtittle">Backend</h1>
                 <hr>
-                <ul>
-                    <li><img class="img-icon-list" src="https://cdn-icons-png.flaticon.com/512/226/226777.png" alt="">
+                <ul class="ul-skills">
+                    <li class="skill-list"><img class="img-icon-list" src="https://cdn-icons-png.flaticon.com/512/226/226777.png" alt="">
                         <p>Java</p>
                     </li>
-                    <li><img class="img-icon-list"
+                    <li class="skill-list"><img class="img-icon-list"
                             src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/ISO_C%2B%2B_Logo.svg/1822px-ISO_C%2B%2B_Logo.svg.png"
                             alt="">
                         <p>C++</p>
                     </li>
-                    <li><img class="img-icon-list"
+                    <li class="skill-list"><img class="img-icon-list"
                             src="https://cdn-icons-png.flaticon.com/512/5968/5968332.png"
                             alt="">
                         <p>PHP</p>
                     </li>
-                    <li><img class="img-icon-list"
+                    <li class="skill-list"><img class="img-icon-list"
                             src="https://cdn.iconscout.com/icon/free/png-256/free-piton-3521655-2945099.png?f=webp"
                             alt="">
                         <p>Python</p>
                     </li>
-                    <li><img class="img-icon-list"
+                    <li class="skill-list"><img class="img-icon-list"
                             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSF9UXfrx8TWM7eyKB1jdIk66ZoGVmTtqWjKQ&s"
                             alt="">
                         <p>MySQL</p>
@@ -204,61 +204,61 @@
             <div class="div-tools-software">
                 <h1 class="subsubtittle">Otros</h1>
                 <hr>
-                <ul>
-                    <li><img class="img-icon-list"
+                <ul class="ul-skills">
+                    <li class="skill-list"><img class="img-icon-list"
                             src="https://images.icon-icons.com/2108/PNG/512/windows_icon_130784.png"
                             alt="">
                         <p>Windows</p>
                     </li>
-                    <li><img class="img-icon-list"
+                    <li class="skill-list"><img class="img-icon-list"
                             src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Tux.svg/1200px-Tux.svg.png" alt="">
                         <p>Linux</p>
                     </li>
-                    <li><img class="img-icon-list"
+                    <li class="skill-list"><img class="img-icon-list"
                             src="https://img.icons8.com/?size=512&id=20906&format=png"
                             alt="">
                         <p>Git</p>
                     </li>
-                    <li><img class="img-icon-list" 
+                    <li class="skill-list"><img class="img-icon-list" 
                             src="https://cdn-icons-png.flaticon.com/512/25/25231.png"
                             alt="">
                         <p>GitHub</p>
                     </li>
-                    <li><img class="img-icon-list"
+                    <li class="skill-list"><img class="img-icon-list"
                             src="https://cdn-icons-png.flaticon.com/512/16459/16459818.png" alt="">
                         <p>ChatGPT</p>
                     </li>
-                    <li><img class="img-icon-list"
+                    <li class="skill-list"><img class="img-icon-list"
                             src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Adobe_Photoshop_CC_icon.svg/2101px-Adobe_Photoshop_CC_icon.svg.png"
                             alt="">
                         <p>WordPress</p>
                     </li>
-                    <li><img class="img-icon-list"
+                    <li class="skill-list"><img class="img-icon-list"
                             src="https://blue.kumparan.com/image/upload/fl_progressive,fl_lossy,c_fill,q_auto:best,w_640/v1622772234/fxowfbvchecy9fd6ccpn.png"
                             alt="">
                         <p>Word</p>
                     </li>
-                    <li><img class="img-icon-list"
+                    <li class="skill-list"><img class="img-icon-list"
                             src="https://static.android.com.pl/uploads/2021/06/excel-5963669_1280.png" alt="">
                         <p>Excel</p>
                     </li>
-                    <li><img class="img-icon-list"
+                    <li class="skill-list"><img class="img-icon-list"
                             src="https://mailmeteor.com/logos/assets/PNG/Microsoft_Office_PowerPoint_Logo_512px.png"
                             alt="">
                         <p>PowerPoint</p>
                     </li>
-                    <li><img class="img-icon-list" src="https://img.icons8.com/?size=512&id=9OGIyU8hrxW5&format=png"
-                            alt="">
-                        <p>Visual Studio Code</p>
-                    </li>
-                    <li><img class="img-icon-list"
-                            src="https://upload.wikimedia.org/wikipedia/commons/9/98/Apache_NetBeans_Logo.svg" alt="">
-                        <p>Apache NetBeans</p>
-                    </li>
-                    <li><img class="img-icon-list"
+                    <li class="skill-list"><img class="img-icon-list"
                             src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Adobe_Photoshop_CC_icon.svg/2101px-Adobe_Photoshop_CC_icon.svg.png"
                             alt="">
                         <p>Photoshop</p>
+                    </li>
+                    <li class="skill-list"><img class="img-icon-list"
+                            src="https://upload.wikimedia.org/wikipedia/commons/9/98/Apache_NetBeans_Logo.svg" alt="">
+                        <p>Apache NetBeans</p>
+                    </li>
+                    <li class="skill-list"><img class="img-icon-list" src="https://img.icons8.com/?size=512&id=9OGIyU8hrxW5&format=png"
+                            alt="">
+                        <p>Visual Studio Code</p>
                     </li>
                 </ul>
             </div>
