cambio de texto

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <br>
     <div class="div-1">
         <p> </p>
-        Graduado como Técnico en Programación y Lic. en Informática, apasionado por la tecnología.
+        Lic. en Informática y Técnico en Programación, apasionado por la tecnología.
         Mi carrera es desafiante y eso significa aprender constantemente y ser autodidacta la mayor parte del tiempo.
         Me gusta el desarrollo de ideas a partir de código, creando soluciones digitales que faciliten la vida de las
         personas.
@@ -270,7 +270,7 @@
     <br>
     <footer>
         <div class="div-footer">
-            <p>© 2025 JAIR-PL Freelancer Developer</p>
+            <p>© 2025 JAIR-PL Desarrollador</p>
         </div>
     </footer>
     <script src="scripts/codigo.js"></script>
