--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
     <nav>
         <div class="div-button">
-            <p>Jair Pérez</p>
+            <a href="#">
+                <p>Inicio</p>
+            </a>
         </div>
         <div class="div-button">
             <a href="https://drive.google.com/file/d/1vwl3EDp83IVO1TeMmRA9JCB8hRdbs3Yv/view?usp=sharing" Target="_blank">
@@ -60,7 +62,8 @@
         </div>
     </div>
 
-    <h1 class="name">Desarrollador Web y Desarrollador de Software Java</h1>
+    <h1 class="name">JAIR192000</h1>
+    <div class="div-name2"><small class="name2">pero mi nombre real es <b>Oscar Jair Pérez López</b></small></div>
     <br>
     <div class="div-1">
         <p> </p>
